test/bad/rep0.pacc
/*
nopacc 5:9 'expected NameStart:c:0'
*/

S <- .**
